{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Clock",
            "id": "0c584fed-665d-4230-b6a7-a846aa09e33d",
            "actions": [
                {
                    "name": "RingLeft",
                    "type": "Button",
                    "id": "ef11e850-d185-4565-af9f-1eb8b2d8b5a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RingRight",
                    "type": "Button",
                    "id": "471be336-87fc-4ee9-ab5d-6e025f5f7b39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tick",
                    "type": "Button",
                    "id": "b0d6d405-d60b-4b42-b636-716e2cbf01e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skip",
                    "type": "Value",
                    "id": "19290e6a-7cd0-4ca4-9f27-dccf26a15f7b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwitchRight",
                    "type": "Button",
                    "id": "b030e087-4ac2-443f-bf45-e1f5eaeda8f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchLeft",
                    "type": "Button",
                    "id": "843419a4-fd05-411a-8432-8cc669188138",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cf87f2a1-99ff-4479-baad-37b9b70076f8",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b5fd743-c01c-4dcf-a261-d2ec9f3ceab3",
                    "path": "<SwitchProControllerHID>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34942f7d-64f7-48c6-8723-daaed4bacc22",
                    "path": "<SwitchProControllerHID>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11b1d2b4-6176-4367-9d1f-c7a49a36e206",
                    "path": "<SwitchProControllerHID>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Tick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e47104d-2be0-48d5-85e3-4ea914ba4dd8",
                    "path": "<SwitchProControllerHID>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.8)",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23e4aa59-2dd7-4a3c-bdd2-d0764e508dbc",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RingLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0a825f2-38a0-4429-a1a7-57bbafffee9f",
                    "path": "<SwitchProControllerHID>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RingLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6fce2ed1-21f5-4aff-a430-f77789b64f0a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RingRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b23e154-e27e-4cfc-8e13-d58d3965c708",
                    "path": "<SwitchProControllerHID>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RingRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed16dc9f-9d07-45e7-a702-cf2fa31dbc34",
                    "path": "<SwitchProControllerHID>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "883a136f-1ee1-4436-82a5-000a396f5edf",
                    "path": "<SwitchProControllerHID>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Free",
            "id": "944f3458-cd1a-405a-acd6-eb0b261c0fd3",
            "actions": [
                {
                    "name": "New action",
                    "type": "Value",
                    "id": "71db9059-7b39-4c3c-a0d6-2db5542acb48",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6fb3f1aa-c85d-4416-b87d-8f3789085c22",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}